@@ -2084,6 +2084,16 @@ ability to resist certain demeaning blows (such as  Coup De \
 Graces, kicks, whomps, bashes, dirt kicks, trips, etc..) \
 grows.
 
+HEROIC_REFLEXES=THIEF_HEROIC_REFLEXES
+THIEF_HEROICREFLEXES=THIEF_HEROIC_REFLEXES
+THIEF_HEROIC_REFLEXES=<ABILITY>\
+Example  : \n\r\
+The thieves reflexes are so attuned to traps that he or she \
+becomes able to leap to the aid of a party memory who has \
+triggered a trap and intercept it on their behalf.  The \
+thief then has a bonus to avoid the trap themselves.  This effect \
+can only occur from time to time.  
+
 THIEF_HIDE=HIDE
 HIDE=<ABILITY>\
 Usage    : HIDE \n\r\
