@@ -32,6 +32,7 @@
  31. New Skills: Whiplash, Research Item, Research Region Map
  32. New Prayers: Improved Warning Glyph, Sense Parish, Reflect Prayer, Amplify Unholy Weapon
  33. New Prayers: Empower Holy Weapon, Empower Sacred Weapon
+ 34. New Thief skills: Heroic Reflexes
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
   2. New PLAYERDEATH option: RETAIN -- to allow player mobs to keep their items on death.
